[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://scripts/ui/level_select.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/ui/NavButton.tscn" id="2"]
[ext_resource type="FontFile" path="res://assets/fonts/gemunu-libre-v8-latin-700.ttf" id="3"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0.552941, 0.552941, 0.552941, 0.22)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.254902, 0.254902, 0.254902, 1)

[node name="Layout" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 18.0
offset_right = -20.0
offset_bottom = -18.0

[node name="VBox" type="VBoxContainer" parent="Layout"]
layout_mode = 2
theme_override_constants/separation = 14

[node name="Header" type="VBoxContainer" parent="Layout/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TopRow" type="HBoxContainer" parent="Layout/VBox/Header"]
layout_mode = 2

[node name="BackButton" parent="Layout/VBox/Header/TopRow" instance=ExtResource("2")]
layout_mode = 2
custom_minimum_size = Vector2(140, 50)
text = "BACK"

[node name="Title" type="Label" parent="Layout/VBox/Header/TopRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.933333, 0.898039, 0.913725, 1)
theme_override_colors/font_outline_color = Color(0.254902, 0.737255, 0.737255, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 42
text = "LEVEL SELECT"
horizontal_alignment = 1

[node name="HeaderSpacer" type="Control" parent="Layout/VBox/Header/TopRow"]
layout_mode = 2
custom_minimum_size = Vector2(140, 50)

[node name="WorldTabs" type="HBoxContainer" parent="Layout/VBox/Header"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="World1" parent="Layout/VBox/Header/WorldTabs" instance=ExtResource("2")]
layout_mode = 2
custom_minimum_size = Vector2(120, 44)
text = "WORLD 1"

[node name="World2" parent="Layout/VBox/Header/WorldTabs" instance=ExtResource("2")]
layout_mode = 2
custom_minimum_size = Vector2(120, 44)
text = "WORLD 2"

[node name="World3" parent="Layout/VBox/Header/WorldTabs" instance=ExtResource("2")]
layout_mode = 2
custom_minimum_size = Vector2(120, 44)
text = "WORLD 3"

[node name="WorldStatus" type="Label" parent="Layout/VBox/Header"]
layout_mode = 2
theme_override_colors/font_color = Color(0.933333, 0.898039, 0.913725, 1)
theme_override_colors/font_outline_color = Color(0.254902, 0.254902, 0.254902, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 18
text = "World 1"

[node name="DevRow" type="HBoxContainer" parent="Layout/VBox/Header"]
layout_mode = 2

[node name="TestSceneButton" parent="Layout/VBox/Header/DevRow" instance=ExtResource("2")]
layout_mode = 2
custom_minimum_size = Vector2(200, 42)
text = "TEST SCENE"

[node name="LevelPanel" type="Panel" parent="Layout/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("1")

[node name="LevelGrid" type="GridContainer" parent="Layout/VBox/LevelPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 14.0
offset_top = 14.0
offset_right = -14.0
offset_bottom = -14.0
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 5
